<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Guests Form -->
    <string name="guest_form_name">Nome</string>
    <string name="guest_form_edit_hint">Nome da Pessoa</string>
    <string name="guest_form_presence">Presença</string>
    <string name="guest_form_radio_present">Presente</string>
    <string name="guest_form_radio_absent">Ausente</string>
    <string name="guest_form_button">Salvar</string>

    <string name="menu_all_guests">Todos os Convidados</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absent">Ausentes</string>

    <string name="row_guest_text">Convidados</string>
</resources>